--- a/Resources/css/style.css
+++ b/Resources/css/style.css
@@ -1,11 +1,19 @@
 /* LANDING */
 
 
-.navIcon{
-    background-image: url(img/IOlogo.png);
+#rotate{
+    background-image: url(img/landing/navIcon.svg);
     background-size: contain;
     background-repeat: no-repeat;
     z-index:1001;
+    position:fixed;
+    height:50px;
+    width:45px;
+    right:5px;
+    top:5px;
+}
+#rotate:hover{
+    cursor: pointer;
 }
 
 .divNav{
@@ -32,6 +40,9 @@
     font-weight: bold;
     border-bottom:2px solid transparent;
 }
+.navItem:hover{
+    cursor:pointer;
+}
 
 .navItem:hover{
     border-bottom:2px solid #26AAE1;
@@ -46,7 +57,7 @@ header{
     background-image: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), url(img/landing/ironoxygen1.jpg);
     background-size: cover;
     background-position: center;
-    min-height:100vh;
+    height:100vh;
     background-attachment:fixed;
     transition:all 0.3s ease 0s;
 }
@@ -117,21 +128,40 @@ header{
     background-color: transparent;
 }
 
-.cirlce{
-    position:absolute;
-    width:100px;
-    height:100px;
-    border:2px solid red;
-    background-color:white
-    -moz-border-radius: 50px;
-    -webkit-border-radius: 50px;
-    border-radius: 50px;
+.dayTime{
+    width:75px;
+    transition:all 0.3s ease 0s;
+    display: inline-block;
 }
+
+@media (min-width:560px){
+    .dayTime{
+        margin-top:50px;
+    }
+}
+
+
+/*
+.bigFeature{
+    display:none;
+    position:fixed;
+    height:100vh;
+    width:100%;
+    background-color:rgba(255,255,255,.9);
+    color:white;
+    z-index:1002;
+    transition:all 0.3s ease 0s;
+    text-align: center;
+}
+*/
+
+
+
 
 .stickyHeader{
     padding-bottom:5px;
     background-color:white;
-    top:0px;
+    top:-1px;
     position:sticky;
     width:100%;
     height:60px;
@@ -155,13 +185,14 @@ header{
     border:2px solid white;
     border-radius: 10%;
     margin-top:10px;
+    color:white;
+    font-weight: bold;
     text-align:center;
 }
-.featureBox{
-    z-index:-10;
-    color:white;
-    font-weight:
+.feature:hover{
+    cursor:pointer;
 }
+
 
 #siteMap{
     text-align: center;
@@ -189,3 +220,42 @@ header{
         width:100%;
     }
 }
+
+.bigFeature{
+    display:none;
+    position:fixed;
+    height:100vh;
+    width:100%;
+    background-color:rgba(0,0,0,.75);
+    color:white;
+    z-index:1002;
+/*    transition:all 0.3s ease 0s;*/
+    text-align: center;
+}
+.smallFeature{
+    background-color:deepskyblue;
+    border:3px solid white;
+    height:80%;
+    max-height:400px;
+    max-width:400px;
+    width:80%;
+    margin: auto;
+  position: absolute;
+  top: 0; left: 0; bottom: 0; right: 0;
+    border-radius:10px;
+}
+.showFeature{
+    display:inline-block;
+}
+.featureX{
+    height:25px;
+    width:25px;;
+    float:right;
+}
+.featureX:hover{
+    cursor:pointer;
+}
+.xBTN{
+    font-size:25px;
+}
+
