--- a/Resources/css/style.css
+++ b/Resources/css/style.css
@@ -233,7 +233,7 @@ header{
     text-align: center;
 }
 .smallFeature{
-    background-color:deepskyblue;
+    background-color:#26AAE1;
     border:3px solid white;
     height:80%;
     max-height:400px;
@@ -258,4 +258,30 @@ header{
 .xBTN{
     font-size:25px;
 }
+.scheduleFeature{
+    height:100% !important;
+    max-height: 2000px;
+    border-bottom-left-radius: 0px;
+    border-bottom-right-radius: 0px;
+}
+.schedDiv{
+    margin-top:30px;
+}
+
+.dayCareWrap{
+    margin-top:10px
+}
+.dayCare{
+    display: inline-block;
+    height:75px;
+    width:75px;
+    background-color: white;
+    border:2px solid white;
+    margin-bottom:5px;
+}
+.kidsFeature{
+    height:200px;
+}
+
+
 
