--- a/Resources/css/style.css
+++ b/Resources/css/style.css
@@ -136,6 +136,12 @@ header{
     display: inline-block;
 }
 
+@media (max-width:360px){
+    .dayTime{
+        width:40px;
+    }
+}
+
 @media (min-width:560px){
     .dayTime{
         margin-top:50px;
