--- a/Resources/css/style.css
+++ b/Resources/css/style.css
@@ -1,4 +1,4 @@
-#rotate{background-image:url(Resources/css/img/landing/navIcon.svg);background-size:contain;background-repeat:no-repeat;z-index:1001;position:fixed;height:50px;width:45px;right:5px;top:5px;}
+#rotate{background-image:url(img/landing/navIcon.svg);background-size:contain;background-repeat:no-repeat;z-index:1001;position:fixed;height:50px;width:45px;right:5px;top:5px;}
 #rotate:hover{cursor:pointer;}
 .divNav{display:none;position:fixed;height:100vh;width:100%;background-color:rgba(255,255,255,.9);color:white;z-index:1000;text-align:center;}
 .showNav{display:inline-block;}
@@ -22,7 +22,7 @@ header{}
 @media (min-width:560px){.dayTime{margin-top:50px;}
 }
 .stickyHeader{padding-bottom:5px;background-color:white;top:-1px;position:sticky;width:100%;height:60px;padding-top:5px;}
-#landingInfo{text-align:center;background-color:white;background-image:-webkit-linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), url(img/landing/row.jpg);background-image:linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), url(Resources/css/img/landing/rowpic.jpg);background-size:cover;background-position:right top;background-attachment:fixed;}
+#landingInfo{text-align:center;background-color:white;background-image:-webkit-linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), url(img/landing/row.jpg);background-image:linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), url(img/landing/rowpic.jpg);background-size:cover;background-position:right top;background-attachment:fixed;}
 .feature{height:200px;width:300px;display:inline-block;margin-top:10px;color:white;font-weight:bold;text-align:center;border-radius:20px;}
 .feature:hover{cursor:pointer;}
 #siteMap{text-align:center;background-color:#26AAE1;color:white;padding-bottom:10px;padding-top:10px;}
@@ -62,12 +62,12 @@ header{}
 .rec{background-size:contain;background-position:center;background-repeat:no-repeat;transition:all 0.3s ease 0s;}
 .rec:hover{-moz-box-shadow:0 0 25px 5px #F15A2A;-webkit-box-shadow:0 0 25px 5px #F15A2A;box-shadow:0 0 25px 5px #F15A2A;}
 .rec:active{-moz-box-shadow:0 0 25px 5px #F15A2A;-webkit-box-shadow:0 0 25px 5px #F15A2A;box-shadow:0 0 25px 5px #F15A2A;}
-#amenities{background-image:url(Resources/css/img/features/amenities.png);}
-#refer{background-image:url(Resources/css/img/features/refer.png);}
-#promos{background-image:url(Resources/css/img/features/currentpromo.png);}
-#kids{background-image:url(Resources/css/img/features/kidsclub.png);}
-#web{background-image:url(Resources/css/img/features/weboffer.png);}
-#schedule{background-image:url(Resources/css/img/features/classschedule.png);}
-#gallery{background-image:url(Resources/css/img/features/gallery.png);}
-#map{background-image:url(Resources/css/img/features/MapandDirections.png);}
-.trialHeader{background-image:-webkit-linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), url(Resources/css/img/gallery/IO2.jpg);background-image:linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), url(Resources/css/img/gallery/IO2.jpg);background-size:cover;background-position:center;height:100vh;background-attachment:fixed;text-align:center;}
+#amenities{background-image:url(img/features/amenities.png);}
+#refer{background-image:url(img/features/refer.png);}
+#promos{background-image:url(img/features/currentpromo.png);}
+#kids{background-image:url(img/features/kidsclub.png);}
+#web{background-image:url(img/features/weboffer.png);}
+#schedule{background-image:url(img/features/classschedule.png);}
+#gallery{background-image:url(img/features/gallery.png);}
+#map{background-image:url(img/features/MapandDirections.png);}
+.trialHeader{background-image:-webkit-linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), url(img/gallery/IO2.jpg);background-image:linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), url(img/gallery/IO2.jpg);background-size:cover;background-position:center;height:100vh;background-attachment:fixed;text-align:center;}
