--- a/Resources/css/style.css
+++ b/Resources/css/style.css
@@ -1,3 +1,31 @@
+
+#hidden1::before
+		{content:url("img/gallery/IO10.jpg");
+		 width:0;
+		 height:0;
+		 visibility:hidden;}
+#hidden2::before
+		{content:url("img/gallery/IO15.jpg");
+		 width:0;
+		 height:0;
+		 visibility:hidden;}
+#hidden3::before
+		{content:url("img/gallery/IO8.jpg");
+		 width:0;
+		 height:0;
+		 visibility:hidden;}
+
+#hidden1::after{
+    display:none;
+}
+#hidden2::after{
+    display:none;
+}
+#hidden3::after{
+    display:none;
+}
+
+
 #rotate{background-image:url(img/landing/navIcon.svg);background-size:contain;background-repeat:no-repeat;z-index:1001;position:fixed;height:50px;width:45px;right:5px;top:5px;}
 #rotate:hover{cursor:pointer;}
 .divNav{display:none;position:fixed;height:100vh;width:100%;background-color:rgba(255,255,255,.9);color:white;z-index:1000;text-align:center;}
