--- a/Resources/css/style.css
+++ b/Resources/css/style.css
@@ -1,4 +1,44 @@
-
+#hiddenWrap{
+    z-index: -1000;
+    position: fixed;
+    bottom:0px;
+    left:0px;
+    height:0px;
+    width:0px;
+    visibility: hidden;
+}
+#hidden1{
+    position:absolute;
+    visibility: hidden;
+    background-image: url(img/gallery/IO10.jpg);
+    height:0px;
+    width:0px;
+}
+#hidden2{
+    position:absolute;
+    visibility: hidden;
+    background-image: url(img/gallery/IO15.jpg);
+    height:0px;
+    width:0px;
+}
+#hidden3{
+    position:absolute;
+    visibility: hidden;
+    background-image: url(img/gallery/IO8.jpg);
+    height:0px;
+    width:0px;
+}
+@media (max-width:768px){
+    .landingHeader1{
+        background-attachment: inherit;
+    }
+    .landingHeader2{
+        background-attachment: inherit;
+    }
+    .landingHeader3{
+        background-attachment: inherit;
+    }
+}
 
 
 
@@ -28,6 +68,11 @@ header{}
 }
 .stickyHeader{padding-bottom:5px;background-color:white;top:-1px;position:sticky;width:100%;height:60px;padding-top:5px;}
 #landingInfo{text-align:center;background-color:white;background-image:-webkit-linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), url(img/landing/row.jpg);background-image:linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), url(img/landing/rowpic.jpg);background-size:cover;background-position:right top;background-attachment:fixed;}
+@media (max-width:768px){
+    #landingInfo{
+        background-attachment: inherit;
+    }
+}
 .feature{height:200px;width:300px;display:inline-block;margin-top:10px;color:white;font-weight:bold;text-align:center;border-radius:20px;}
 .feature:hover{cursor:pointer;}
 #siteMap{text-align:center;background-color:#26AAE1;color:white;padding-bottom:10px;padding-top:10px;}
