--- a/Resources/css/style.css
+++ b/Resources/css/style.css
@@ -85,7 +85,7 @@ header{}
 .bigSchedFeature{display:none;width:100%;background-color:rgba(0,0,0,.75);color:white;z-index:1002;text-align:center;}
 .smallFeature{background-color:#26AAE1;border:3px solid white;height:80%;max-height:400px;max-width:400px;width:100%;margin:auto;position:absolute;top:0;left:0;bottom:0;right:0;border-radius:10px;}
 .showFeature{display:inline-block;}
-.featureX{height:25px;width:25px;;float:right;}
+.featureX{height:25px;width:100%;;float:right;}
 .featureX:hover{cursor:pointer;}
 .xBTN{font-size:25px;}
 .scheduleFeature{height:100% !important;max-height:2000px;border-bottom-left-radius:0px;border-bottom-right-radius:0px;}
