--- a/Resources/css/style.css
+++ b/Resources/css/style.css
@@ -115,6 +115,7 @@ header{}
 #amenities{background-image:url(img/features/amenities.png);}
 #refer{background-image:url(img/features/refer.png);}
 #promos{background-image:url(img/features/currentpromo.png);}
+#belly{background-image:url(img/features/belly.png);}
 #kids{background-image:url(img/features/kidsclub.png);}
 #web{background-image:url(img/features/weboffer.png);}
 #schedule{background-image:url(img/features/classschedule.png);}
